--- a/client/src/app.css
+++ b/client/src/app.css
@@ -17,11 +17,11 @@ html {
 
 @layer base {
 	body {
-		@apply bg-white text-black font-body;
+		@apply bg-white font-body text-black;
 	}
 
 	input {
-		@apply bg-transparent appearance-none w-full;
+		@apply w-full appearance-none bg-transparent;
 	}
 
 	input:focus {
